--- a/cybersecurity_project/Dockerfile
+++ b/cybersecurity_project/Dockerfile
@@ -2,10 +2,10 @@
 FROM python:3.8-slim
 
 # Set the working directory in the container
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# Copy the current directory contents into the container at /usr/src/app
-COPY . .
+# Copy the current directory contents into the container at /app
+COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 80
 
 # Define environment variable
-ENV NAME World
+ENV NAME CyberSecurityProject
 
 # Run app.py when the container launches
-CMD ["python", "./app.py"]
+CMD ["python", "src/app.py"]
