--- a/capstoneproject/backend/package.json
+++ b/capstoneproject/backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,5 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "openai": "^4.57.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
