Added some more changes help it looks alot more clean then before - Eric Angel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,8 @@ services:
       REACT_APP_API_URL: ${REACT_APP_API_URL}
       REACT_APP_SPLINE_VIEWER_URL: ${REACT_APP_SPLINE_VIEWER_URL}
       REACT_APP_RAPIDAPI_KEY_1: ${RAPIDAPI_KEY_1}
-      REACT_APP_RAPIDAPI_KEY_2: ${REACT_APP_RAPIDAPI_KEY_2}
-      REACT_APP_RAPIDAPI_KEY_3: ${REACT_APP_RAPIDAPI_KEY_3}
+      REACT_APP_RAPIDAPI_KEY_2: ${RAPIDAPI_KEY_2}
+      REACT_APP_RAPIDAPI_KEY_3: ${RAPIDAPI_KEY_3}
     ports:
       - '3000:3000'
     depends_on:
