added some changes like using the latest docker updates to this program as well

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# Base image
-FROM node:16-slim
+# Use Node.js 18-slim as a base image
+FROM node:18-slim
 
 # Set working directory
 WORKDIR /app
@@ -9,8 +9,10 @@ COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm ci --only=production
+# Optional: Attempt to fix vulnerabilities
+RUN npm audit fix --force || true
 
-# Copy rest of the backend code
+# Copy the rest of the backend code
 COPY . .
 
 # Expose the port that your app will run on
