--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Use Node.js 16 on Alpine Linux
-FROM node:16-alpine
+# Use Node.js 18 on Alpine Linux
+FROM node:18-alpine
 
 # Create app directory and set permissions
 RUN mkdir -p /app && chown -R node:node /app
@@ -15,6 +15,8 @@ COPY --chown=node:node package.json package-lock.json ./
 
 # Install dependencies
 RUN npm ci --only=production
+# Optional: Attempt to fix vulnerabilities
+RUN npm audit fix --force || true
 
 # Copy the rest of your frontend code
 COPY --chown=node:node . .
